# askdev-cli

./: .env  .gitignore  LICENSE  MainActivity.java  MainActivityTest.java  README.md  app.py  askdev.py  error_db.json  error_db_expanded.json  logcat.txt  pyproject.toml  setup.py
.github/workflows/: ci.yml  pypi-publish.yml
askdev/: __init__.py  cli.py
askdev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
askdev/core/: engine.py  parser.py
askdev/tui/: prompts.py
examples/: MainActivityTest.java
tests/: test_engine.py  test_parser.py
