[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "askdev"
version = "0.1.0"
description = "Android Error CLI Assistant: Explain and fix Android errors from your terminal."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]",
    "rich"
]

[project.scripts]
askdev = "app:run_main"
