[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "askdev"
version = "1.0.0"
description = "Android Error CLI Assistant: Explain and fix Android errors from your terminal."
authors = [
    { name = "askdev contributors", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]",
    "python-dotenv",
    "requests",
    "rich"
]

[project.scripts]
askdev = "askdev.cli:run_main"
ad = "askdev.cli:run_main"
